Update default lifecycle phase

--- a/examples/minimal/pom.xml
+++ b/examples/minimal/pom.xml
@@ -70,6 +70,7 @@
 						</configuration>
 					</execution>
 					<execution>
+						<id>stop</id>
 						<goals>
 							<goal>stop</goal>
 						</goals>
