--- a/server/pom.xml
+++ b/server/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.metaloom.test</groupId>
     <artifactId>testdatabase-provider</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>0.1.1</version>
   </parent>
 
   <name>Testdatabase Provider :: Server</name>
