--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -45,6 +45,11 @@
         <artifactId>logback-classic</artifactId>
         <version>1.2.10</version>
       </dependency>
+      <dependency>
+        <groupId>org.flywaydb</groupId>
+        <artifactId>flyway-core</artifactId>
+        <version>9.16.1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
