--- a/postgresql-db/pom.xml
+++ b/postgresql-db/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.metaloom.test</groupId>
     <artifactId>testdatabase-provider</artifactId>
-    <version>0.1.2-SNAPSHOT</version>
+    <version>0.1.2</version>
   </parent>
 
   <name>Testdatabase Provider :: PostgreSQL DB</name>
