--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -31,6 +31,11 @@
       <artifactId>testdatabase-provider-postgresql-db</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.eclipse.jdt</groupId>
+      <artifactId>org.eclipse.jdt.annotation</artifactId>
+    </dependency>
+
 
     <!-- Maven-->
     <dependency>
