--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     <postgres.driver.version>42.2.2</postgres.driver.version>
     <testcontainer.version>1.17.6</testcontainer.version>
     <provider.build.timestamp>${maven.build.timestamp}</provider.build.timestamp>
+    <dagger.version>2.45</dagger.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -98,6 +99,19 @@
         <artifactId>junit-jupiter-api</artifactId>
         <version>5.9.2</version>
       </dependency>
+
+      <!-- Other-->
+      <dependency>
+        <groupId>com.google.dagger</groupId>
+        <artifactId>dagger</artifactId>
+        <version>${dagger.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.eclipse.jdt</groupId>
+        <artifactId>org.eclipse.jdt.annotation</artifactId>
+        <version>2.2.700</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
