Set new dev version

--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>io.metaloom.test</groupId>
     <artifactId>testdatabase-provider</artifactId>
-    <version>0.1.3</version>
+    <version>0.1.4-SNAPSHOT</version>
   </parent>
   <packaging>maven-plugin</packaging>
 
