--- a/client/pom.xml
+++ b/client/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.metaloom.test</groupId>
     <artifactId>testdatabase-provider</artifactId>
-    <version>0.1.3</version>
+    <version>0.1.4-SNAPSHOT</version>
   </parent>
 
   <name>Testdatabase Provider :: Client</name>
