--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -10,7 +10,7 @@
   <properties>
     <postgres.driver.version>42.2.2</postgres.driver.version>
     <testcontainer.version>1.17.6</testcontainer.version>
-    <testdatabase-provider.version>0.1.3</testdatabase-provider.version>
+    <testdatabase-provider.version>0.1.4-SNAPSHOT</testdatabase-provider.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -21,6 +21,7 @@
     <module>minimal</module>
     <module>complex</module>
     <module>dedicated</module>
+    <module>dedicated-no-maven-plugin</module>
   </modules>
 
   <dependencyManagement>
@@ -59,7 +60,7 @@
         <plugin>
           <groupId>io.metaloom.maven</groupId>
           <artifactId>testdb-maven-plugin</artifactId>
-          <version>0.1.3</version>
+          <version>0.1.4-SNAPSHOT</version>
         </plugin>
         <plugin>
           <groupId>org.flywaydb</groupId>
